# Parallel-Scraper

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/: urls.txt
include/parallel-scraper/: Config.hpp  FileIO.hpp  HttpClient.hpp  Models.hpp  Orchestrator.hpp  Parser.hpp  ResultStore.hpp  Stats.hpp
src/: main.cpp
src/net/: HttpClient.cpp
src/orchestrator/: Orchestrator.cpp
src/parse/: Parser.cpp
src/stats/: Stats.cpp
src/store/: ResultStore.cpp
src/utils/: Config.cpp  FileIO.cpp
tests/: test_parser.cpp  test_resultstore.cpp  test_stats.cpp
tests/data/: sample_product.html
